--- a/data_mining/数据挖掘_实用机器学习工具与技术.md
+++ b/data_mining/数据挖掘_实用机器学习工具与技术.md
@@ -1,3 +1,8 @@
 # Title Data Mining - Practical Machine Learning Tools and Techniques
-目的是为了入门，能看懂Prof. Shin Matsushima 最新的一篇论文
 ---
+目的是为了入门，能看懂Prof. Shin Matsushima 最新的一篇论文
+
+从目录来看，分为数据挖掘初步与高级机器学习方案两部分。作为初步，先看数据挖掘的基础概念部分。有些名词的专业性较高，为了未来的进一步学习，深入学习应该使用英文版的图书和文献。github中有《统计学习方法》与《机器学习》的代码示例，可以进行克隆学习。
+
+### 数据挖掘基础
+
