--- a/language/English/网课.md
+++ b/language/English/网课.md
@@ -1,4 +1,4 @@
-### Day1
+### 201214
 
 #### 助教带拆句L1
 
@@ -15,3 +15,40 @@
 3. 介词打头略读(不是跳读)至逗号
    记忆句子的时候要以句子主体为主(主语谓语)，记忆的信息应是金字塔形的，越顶层的信息分配越多的记忆力
 4. and除了并列，还会产生顺序主次关系，如果在情理上有了顺序要保证其固定，错误选上会有顺序上的颠倒
+
+### 201215
+
+#### 助教拆句L2
+
+1. v+ing的伴随状语，可能有顺序的问题，可能会表示较弱的因果关系
+   however 转折； no 否定，会在选项中有颠倒； and 论证后的例证衔接，有微弱的因果关系
+2. 比较级通过unlike嵌套，通过修饰其对比项来显示强弱
+3. already 表示之前也有，可以出题
+
+#### 助教拆句L3
+
+1. despite, no 等逻辑词将文章串联起来，可以梳理清楚文章脉络
+   串联起来之后细节题可以直接将范围缩小到一句话
+2. 用(when引导的)前置状语从句表示假设，注意选项中可能会出假设的反向后问结果
+3. 句首有according to conventional theory 后面一般是新理论
+   注意长句的论述逻辑，在并列中存在潜在因果，不要倒置
+
+#### 助教拆句L4
+
+1. 多个并列，出题会有1直接没有、<u>2部分重现+错误修饰、3同义转化+错误修饰</u>在2、3的情况下注意带回去对比保险一点
+2. for、as后面的从句表示原因
+3. already 后面一般是topic，要注意
+
+#### 助教拆局L5
+
+1. 拥有多个定语从句的长句看清楚修饰成分，一层层嵌套即可
+2. 拥有and 并列的两个短句，注意是否含有前后因果关系，若后面的主体含有定语从句要找到修饰的关键词进行嵌套
+
+#### 杰哥精听L1
+
+
+
+
+
+
+
