--- a/language/English/网课.md
+++ b/language/English/网课.md
@@ -1,6 +1,6 @@
 ### 201214
 
-#### 助教带拆句L1
+##### 助教带拆句L1
 
 1. 找到主语、主干部分
    like, that, and 表示的并列部分要分清并列的对子 
@@ -16,16 +16,16 @@
    记忆句子的时候要以句子主体为主(主语谓语)，记忆的信息应是金字塔形的，越顶层的信息分配越多的记忆力
 4. and除了并列，还会产生顺序主次关系，如果在情理上有了顺序要保证其固定，错误选上会有顺序上的颠倒
 
-### 201215
+## 201215
 
-#### 助教拆句L2
+##### 助教拆句L2
 
 1. v+ing的伴随状语，可能有顺序的问题，可能会表示较弱的因果关系
    however 转折； no 否定，会在选项中有颠倒； and 论证后的例证衔接，有微弱的因果关系
 2. 比较级通过unlike嵌套，通过修饰其对比项来显示强弱
 3. already 表示之前也有，可以出题
 
-#### 助教拆句L3
+##### 助教拆句L3
 
 1. despite, no 等逻辑词将文章串联起来，可以梳理清楚文章脉络
    串联起来之后细节题可以直接将范围缩小到一句话
@@ -33,18 +33,71 @@
 3. 句首有according to conventional theory 后面一般是新理论
    注意长句的论述逻辑，在并列中存在潜在因果，不要倒置
 
-#### 助教拆句L4
+##### 助教拆句L4
 
 1. 多个并列，出题会有1直接没有、<u>2部分重现+错误修饰、3同义转化+错误修饰</u>在2、3的情况下注意带回去对比保险一点
 2. for、as后面的从句表示原因
 3. already 后面一般是topic，要注意
 
-#### 助教拆局L5
+##### 助教拆局L5
 
 1. 拥有多个定语从句的长句看清楚修饰成分，一层层嵌套即可
 2. 拥有and 并列的两个短句，注意是否含有前后因果关系，若后面的主体含有定语从句要找到修饰的关键词进行嵌套
 
-#### 杰哥精听L1
+##### 杰哥精听L1
+
+趋势：形式变化，语速变快，快速理解，题目选项变长，逻辑重点，提炼能力
+
+### 2012127
+
+#### 鑫哥阅读 
+
+1. Topic Word 从标题看整个文章的主体和行文逻辑，真正的中心在文中会不停地重复
+   名词 一般是说明文，说明历史或者特性介绍
+   How 问题→解决类文章
+2. 中心词替换：每读一句问自己这句话是不是旧话题，是否含有新信息，对于TW的作用是什么，要过滤掉新旧概念
+3. 如果不是新概念，作用就是过渡句
+4. 读文章的时候要有筛选信息的能力，通过新旧信息的询问强化自己的中心意识，从而6选3能容易一点
+5. 需要仔细读文章才能做的题：细节题、推断题、目的题
+   先看题目(要确定好题目和文章的中心)→带着关键词找答案句→读选项找正确选项
+6. 具有独立特征的题：词汇、插入题、简化题、指代题
+7. 6选3
+
+##### 词汇题
+
+同义词替换，逻辑词
+托福必考词，机经词汇，直接选
+
+##### 插入题
+
+1. 重点在于句子和句子之间的逻辑关系，通过线索(前面或者后面)确定，根据线索预判前后的内容，先读待插入句，预判前后内容带入去读
+2. 通过关键线索词表示逻辑关系，如in fact(弱转折、顺承)，one of(并列、分论点之一)
+3. 否定可以是承上启下的过渡句，否定可以是为了引出下文(插入题可以选A)
+4. 插入题考的是句子间的逻辑关系，而不是句子内的逻辑关系
+5. 如果没有关键的逻辑关键词，特征点的关键词也是判断句间关系的关键
+6. 定冠词 such、the、 these 都要注意在前文找到对应名词
+7. 如果句中存在复数名词，前后会出现相关多数解释
+8. 转折、比较、否定、举例、因果、指代、并列、顺序、名词复数是突破口
+
+##### 句子简化题
+
+1. 错误选项要么改变句子本意要么缺少关键信息，选择最优选项
+   错误选项会有缺、错、多、逻辑的问题，也有可能存在整体态度与原文不同，完美选项则没有
+2. <u>可以使用助教拆句网课的方法去梳理逻辑关系与句子主干</u>
+3. 出现正确细节信息但是没有体现原文主体想表达的意思，也是不能选的
+
+##### 目的题
+
+1. 中心词，举例逻辑：从上往下读找到段落的中心句，与题目、例子要一致(TS、例子、选项三位一体)
+   段落功能：结构功能，注意前后关系
+   实验类，控制变量
+
+##### 推断题
+
+1. 比较逻辑：不同对象的比较、同一对象不同时间的比较
+   因果逻辑：归纳和概括
+   举例逻辑：整体和部分
+2. 通过问题的关键词，找到描述TW的关键句中的特征，进行逻辑推断
 
 
 
