--- a/language/English/网课.md
+++ b/language/English/网课.md
@@ -58,15 +58,23 @@
 2. 中心词替换：每读一句问自己这句话是不是旧话题，是否含有新信息，对于TW的作用是什么，要过滤掉新旧概念
 3. 如果不是新概念，作用就是过渡句
 4. 读文章的时候要有筛选信息的能力，通过新旧信息的询问强化自己的中心意识，从而6选3能容易一点
-5. 需要仔细读文章才能做的题：细节题、推断题、目的题  
+5. 需要仔细读文章才能做的题：细节题、推断题、目的题 、排除题 
    先看题目(要确定好题目和文章的中心)→带着关键词找答案句→读选项找正确选项
 6. 具有独立特征的题：词汇、插入题、简化题、指代题
-7. 6选3
+7. 做题的同时要在纸上记录每段的关键词
 
 ##### 词汇题
 
 同义词替换，逻辑词  
 托福必考词，机经词汇，直接选
+
+##### 排除题(NOT)
+
+1. 不要当成细节题去做，费时间
+2. 先看选项中的关键信息，去掉旧信息，提取能考的新信息
+3. 看完选项后在原文从上往下读
+4. 错误选项有两种：与原文驳斥、无中生有
+5. 写题的不要浪费时间，确定选项之后直接结束作答
 
 ##### 插入题
 
@@ -100,7 +108,56 @@
 2. 通过问题的关键词，找到描述TW的关键句中的特征，进行逻辑推断
 
 
+##### 6选3
 
+1. 选分论点：但是细节不选是误区  
+   和中心无关的细节  vs 可以体现中心的细节  
+2. 步骤：快速筛选选项，选择中心明显匹配的、排除明显相反的  
+   ​            保留不确定的选项，不要马上去核查，会浪费时间
+3. 如果已经确定的选项不能满足选3要求，将不确定的选项进行核查  
+   知道段落位置时直接从中心句附近的1-2句和尾句判断  
+   要特别注意没有出题的段落，注意我们没有时间将所有的细节逐一核查
+
+##### 选项设计
+
+1. 要注意段落中中心与例子的中心词体现
+2. 错误选项有非中心的选项，原文中有，但是不是正选
+3. 正选一定是段落的中心句中心词所体现的
+
+##### 文章类型
+
+​	问题解决(how)、并列展开(s)、现象展开(原因、现象)
+
+##### 文章逻辑
+
+​	阅读方法+选项套路
+
+1. 因果逻辑：  
+   找准原因和结果  
+   因果倒置；原因or结果替换；并列改因果(名词不可以改，动词可以)；隐含因果；比较对象改因果
+2. 举例逻辑：  
+   中心句与中心词的体现  
+   例子证明例子；非中心词的干扰；中心句越来越难找；特例
+3. 转折逻辑：  
+   转折意味，相反表示  
+   答案在转折前 那么干扰项就在后面，反之亦然；转折和比较可以互换；特例；并列改转折的情况，需要反义词
+4. 比较逻辑：  
+   对象，大小，方面  
+   三个要素都可以出题；比较 = 转折；并列改比较、比较改因果；个体自身比较与不同个体比较的偷换
+5. 并列逻辑：  
+   并列对象  
+   复数名词；否定+并列；并列和比较、因果的结合
+6. 否定逻辑：  
+   否定对象  
+   否定+并列；隐含否定；假否定
+7. 指代逻辑：  
+   指代对象  
+   代入验证；难句、猜测
+8. 顺序逻辑：  
+   时间、空间  
+   推断题；是否有方向性
+
+#### 精听营
 
 
 
