--- a/language/English/网课.md
+++ b/language/English/网课.md
@@ -44,10 +44,6 @@
 1. 拥有多个定语从句的长句看清楚修饰成分，一层层嵌套即可
 2. 拥有and 并列的两个短句，注意是否含有前后因果关系，若后面的主体含有定语从句要找到修饰的关键词进行嵌套
 
-##### 杰哥精听L1
-
-趋势：形式变化，语速变快，快速理解，题目选项变长，逻辑重点，提炼能力
-
 ### 2012127
 
 #### 鑫哥阅读 
@@ -159,6 +155,32 @@
 
 #### 精听营
 
+##### 基础课
 
+考试要求的是基于语言能力的逻辑能力  
+考试在于：逻辑、笔记、出题思路、选项设计
 
+##### 句子精听步骤讲解  
 
+​	要注意核心名词，其次是句子表达的逻辑关系，进一步是修饰名词的定语和介词，根据一句话要能够预判下一句话能够讲什么，这样听文章能有方向性地听
+
+1. 听<5次：注意弱读，介词，否定，逻辑关系
+2. 看原文，理解句意和主要意思
+3. 找问题，寻找漏信息的原因，并解决
+4. 重听并验证：不看原文听音频，看原文跟着音频跟读
+
+##### 正课
+
+趋势：形式变化，语速变快，快速理解，题目选项变长，逻辑重点，提炼能力
+
+<u>题目类型</u>
+
+细节
+
+判断
+
+目的
+
+重听
+
+主旨
