こうしんしました

--- a/language/English/网课.md
+++ b/language/English/网课.md
@@ -173,14 +173,9 @@
 
 趋势：形式变化，语速变快，快速理解，题目选项变长，逻辑重点，提炼能力
 
-<u>题目类型</u>
+<u>题目类型</u> ：细节、判断、目的、重听、主旨
 
-细节
+<u>笔记不是帮你找答案的</u>，是用来再巩固明确主要思路的，在自己感觉比较顺，大体明白的时候记  
+听30-40S(一段)的时候用自己的话总结这一段的中心内容，不要五秒一词，会影响选项，而是要一边理解一边记，<u>没有理解的部分不要乱记</u>  
 
-判断
 
-目的
-
-重听
-
-主旨
